0.8.6
 - Refactoring:
   - Use pathlib instead of os.path for
     - All session handling/conversion tasks
     - Configuration file management
     - Measurement/Analysis management
   - Support all changes to dclab.definitions (dclab 0.4.0)
 - Bugfixes:
   - Opening sessions containing paths to data with a hash "#" failed
   - AttributeError during autosave when no measurement data is available
   - Exporting to .fcs files failed due to NaN-valued events; Events
     containing NaN values are now ignored (fcswrite 0.1.3.dev22) (#215)
   - Improve displayed float values for selected configuration keys (#216)
0.8.5
 - Update plotting range when switching to log scale (#198)
 - Allow to fix plotting range to retain previous behavior (#198)
 - Initial plotting range is determined from min/max values of all plots (#213)
 - Improved standard contour and kde accuracies using Doane's formula (#147)
 - Bugfixes:
   - Support opening tdms files with capitalized "userDef" column names
     (dclab dclab 0.3.2.dev5) (#212)
   - Wx colors and chaco not compatible anymore (Windows appveyor build)
 - Refactoring:
   - Use pathlib when saving and opening sessions and do not use os.chdir
0.8.4
 - Add pixelation-corrected numerical and analytical isoelastics (#203)
 - Update emodulus look-up table (dclab 0.3.1.dev3) (#202)
 - Improved handling of polygon filters (partly #95)
 - Updated R version to 3.2.5 due to build errors
 - Bugfixes:
   - Young's modulus computation is wrong due to faulty FEM
     simulations (dclab 0.3.1.dev20) (#207)
   - Image/trace panel shows wrong event when the mouse pointer hovers
     from one scatter plot to another
   - Hierarchy children: image, contour, and trace data were not
     displayed in the image/trace panel (dclab 0.3.1.dev1) (#100)
   - Hierarchy children did not support manual filters (dclab 0.3.1.dev2)
   - Regression: Setting plotting range manually not possible (#201)