@@ -5,6 +5,7 @@
      - Configuration file management
      - Measurement/Analysis management
    - Support all changes to dclab.definitions (dclab 0.4.0)
+   - Support all changes to dclab.features (dclab 0.5.0)
  - Bugfixes:
    - Opening sessions containing paths to data with a hash "#" failed
    - AttributeError during autosave when no measurement data is available
